--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/viniciusam/koa-oracledb#readme",
   "dependencies": {
+    "debug": "~2.2.0",
     "oracledb": "^1.11.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-latest": "^6.16.0"
   }
 }
