Added missing build script.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "koa-oracledb",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "node-oracledb middleware for Koa.",
-  "main": "index.js",
+  "main": "lib/koa-oracle.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
+	  "build": "babel src -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
